Fixed mountain siteWrapper margin cutoff

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -20,6 +20,7 @@ p {
   font-size: 1.25rem;
 }
 
+nav,
 main {
   position: relative;
   z-index: 3;
