--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -9,8 +9,6 @@ nav {
   -moz-border-radius: variables.$navRadius;
   width: fit-content;
   cursor: default;
-  z-index: 3;
-  position: relative;
 
   font: {
     family: "Snowburst One", system-ui;
